--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,25 @@ html, body {
 	height: 100%;
 	background: black;
 }
+.slides {
+	width: 100%;
+	height: 100%;
+	margin:0; 
+	padding:0; 
+	white-space: nowrap;
+}
 .slide {
 	height: 100%;
+	width: 100%;
+
+	display: inline-block;
+	vertical-align: top;
 }
 #s1 {
 	background: url("img/grid.png") repeat;
+}
+#s2 {
+	background: #fff;
 }
 .status-bar {
 	display: flex;
@@ -39,7 +53,7 @@ html, body {
 	width: 11em;
 	height: 11em;
 	float: left;
-	padding-right: 10px;
+	margin-right: 20px;
 	border-radius: 50%;
 }
 .card {
@@ -50,6 +64,11 @@ html, body {
 	color: white;
 	padding-bottom: 5px;
 	font-family: "rabbit";
+	transition: font-size 500ms;
+	transition-timing-function: ease-in-out;
+}
+.card-title:hover {
+	font-size: 5em;
 }
 .card-desc {
 	font-size:2em;
