--- a/slide2.css
+++ b/slide2.css
@@ -3,7 +3,7 @@
 	display: inline-block;
 	font-family: monospace, monospace;
 	padding: 10px;
-	transition: padding 250ms;
+	transition: padding 200ms;
 	transition: timing-function: ease-out;
 }
 .bubble:hover {
@@ -15,6 +15,9 @@
 .bubble-comment {
 	font-size: 1.5em;
 	margin-bottom: 10px;
+}
+.bubble-spacer {
+	color: white;
 }
 .bubble-void {
 	border: solid black 2px;
