--- a/slide1.css
+++ b/slide1.css
@@ -20,7 +20,7 @@
 	padding: 30px;
 }
 .card-title {
-	font-size: 4em;
+	font-size: calc(1.75em + 2vw);
 	color: white;
 	padding-bottom: 5px;
 	font-family: "rabbit";
@@ -28,10 +28,10 @@
 	transition-timing-function: ease-out;
 }
 .card-title:hover {
-	font-size: 5em;
+	font-size: 6vw;
 }
 .card-desc {
-	font-size:2em;
+	font-size: calc(1em + 1.25vw);
 	color: white;
 	font-family: "rabbit";
 }
