--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,8 @@ a {
 	overflow-y: hidden;
 }
 .github {
-	width: 11em;
-	height: 11em;
+	width: calc( 8vw + 2em );
+	height: calc( 8vw + 2em );
 	float: left;
 	margin-right: 20px;
 	border-radius: 50%;
