--- a/slide1.css
+++ b/slide1.css
@@ -43,6 +43,11 @@
 .card-row .card {
 	display: table-cell;
 }
+@media screen and (max-width: 700px) {
+	.card {
+		display: block !important;
+	}
+}
 a.orange {
 	color: orange;
 }
