--- a/slide2.css
+++ b/slide2.css
@@ -2,19 +2,19 @@
 	border-radius: 500px;
 	display: inline-block;
 	font-family: monospace, monospace;
-	font-size: calc( 0.25vw + 12px );
+	font-size: calc( 1vw + 0.4em );
 	padding: 10px;
 	transition: padding 200ms;
 	transition: timing-function: ease-out;
 }
-.bubble:hover {
+.bubble-title:hover, .bubble-comment:hover, .bubble-void:hover, .bubble-fill:hover {
 	padding: 20px;
 }
 .bubble-title {
-	font-size: 2em;
+	font-size: calc(2vw + 1em);
 }
 .bubble-comment {
-	font-size: 1.5em;
+	font-size: calc(2vw + 0.5em);
 	margin-bottom: 10px;
 }
 .bubble-spacer {
@@ -40,6 +40,7 @@ ul {
 	list-style-type: none;
 }
 .container {
+	margin-left: 10px;
 	margin-top: 100px;
 }
 li.recent-commit {
