--- a/slide2.css
+++ b/slide2.css
@@ -11,11 +11,13 @@
 	padding: 20px;
 }
 .bubble-title {
-	font-size: calc(2vw + 1em);
+	font-size: calc(2.5vw + 0.5em);
+	margin-bottom: 10px;
 }
 .bubble-comment {
-	font-size: calc(2vw + 0.5em);
+	font-size: calc(2vw + 0.25em);
 	margin-bottom: 10px;
+	margin-top: 5vw;
 }
 .bubble-spacer {
 	color: white;
@@ -36,12 +38,20 @@
 	margin-right: 20px;
 	border-radius: 50%;
 }
+.contrib-container {
+	text-align: center;
+	width: 100%;
+}
+.contribs {
+	width: 90%;
+	display: inline-block;
+}
 ul {
 	list-style-type: none;
 }
 .container {
 	margin-left: 10px;
-	margin-top: 100px;
+	margin-top: 50px;
 }
 li.recent-commit {
 	margin-left: calc( 3.5vw + 5px );
