--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/* Licene for below font can be found at:      */
+/* https://dejavu-fonts.github.io/License.html */
+
+@font-face {
+	font-family: "dejavu";
+	src: url(/DejaVuSansMono.ttf) format("truetype");
+}
 @font-face {
 	font-family: "rabbit";
 	src: url("font/whitrabt.woff");
