--- a/slide1.css
+++ b/slide1.css
@@ -25,6 +25,7 @@
 	padding: 30px;
 }
 .card-title {
+	position: absolute;
 	font-size: calc(1.75em + 2vw);
 	color: white;
 	padding-bottom: 5px;
@@ -32,10 +33,8 @@
 	transition: font-size 400ms;
 	transition-timing-function: ease-out;
 }
-.card-title:hover {
-	font-size: calc(1.75em + 4vw);
-}
 .card-desc {
+	padding-top: calc(1em + 2vw);
 	font-size: calc(1em + 1.25vw);
 	color: white;
 	font-family: "rabbit";
@@ -52,7 +51,18 @@
 	.card {
 		display: block !important;
 	}
+	.card-desc {
+		padding-top: calc(1em + 3.25vw);
+	}
 }
 a.orange {
 	color: orange;
+	transition: color, background 250ms;
+	transition-timing-funciton: cubic-bezier;
+}
+a.orange:hover {
+	color: black;
+	background: orange;
+	opacity: 0.75;
+	text-decoration-line: none;
 }
