Add ability to parse inline italics, bold, and code blocks

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,12 @@ li:before {
   color: var(--gray);
 }
 
+code {
+  color: var(--bg);
+  background: var(--fg);
+  padding: 0.5ch;
+}
+
 .gray {
   color: var(--gray);
 }
