--- a/styles.css
+++ b/styles.css
@@ -76,5 +76,11 @@ blockquote {
   color: var(--gray);
 }
 
+input[type="checkbox"] {
+  pointer-events: none;
+  width: 2ch;
+  margin: 0 1ch 0 0;
+}
+
 .tag:before { content: "["; }
 .tag:after { content: "]"; }
