Add better syntax highlighting for code blocks:
Use highlight.js for generating colored static HTML for use in code blocks.
Highlight.js is really cool: it has zero dependencies, works with a
bunch of different languages, has a bunch of styles you can apply, and
the generated HTML is relatively small.

Also use absolute naming for the stylesheets, which simplifies the template
generation a bit. This means that you wont be able to go to a file directly
via "file:///" anymore, but that isnt a huge deal.

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,7 +10,6 @@
 
 * {
   font-family: monospace;
-  background: var(--bg);
   color: var(--fg);
 }
 
@@ -19,6 +18,7 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
+  background: var(--bg);
 }
 
 main {
@@ -69,18 +69,12 @@ li:before {
 }
 
 code {
-  white-space: pre-wrap;
-  color: var(--bg);
-  background: var(--fg);
-}
-
-code:not(.code-block) {
   padding: 0.5ch;
 }
 
-code.code-block {
-  width: 80ch;
-  display: block;
+pre {
+  width: 76ch;
+  padding: 1ch;
 }
 
 blockquote {
