Add support for markdown tables:
Currently there is no support for aligning the columns, but that should be easy
enough to add. You can still have inline markdown inside of the table, and all
HTML is properly escaped.

--- a/styles/main.css
+++ b/styles/main.css
@@ -72,6 +72,20 @@ li:before {
   color: var(--gray);
 }
 
+table {
+  border-collapse: collapse;
+  margin-left: 0.5ch;
+}
+
+tr {
+  height: 1ch;
+}
+
+td, th {
+  border: 0.25ch solid var(--gray);
+  padding: 0.375ch;
+}
+
 code {
   padding: 0 !important;
 }
