--- a/styles/main.css
+++ b/styles/main.css
@@ -36,6 +36,11 @@ a {
   text-underline-position: under;
 }
 
+a:focus {
+  color: var(--accent1);
+  font-weight: bold;
+}
+
 p, span {
   margin: 0;
 }
