Fix poor mobile rendering:
Due to the viewport settings for mobile browsers, the pages where rendering as
zoomed in by default, and the best way to counteract this was to make the <main>
element fill up the entire width, and scale the text to match it. Doesnt exactly
match the font style of the desktop version, but it still is around 80 chars
wide, so that is fine by me.

--- a/styles/main.css
+++ b/styles/main.css
@@ -129,3 +129,19 @@ input[type="checkbox"] {
 hr {
   border: 1px solid var(--divider);
 }
+
+@media screen and (max-width: 700px) {
+  * {
+    /* magic number, don't ask what it means */
+    font-size: 2vw;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
+
+  main {
+    padding: 1em 1em 0 1em;
+    width: calc(100% - 2em);
+  }
+}
