--- a/styles/main.css
+++ b/styles/main.css
@@ -106,6 +106,11 @@ pre {
   overflow-x: auto;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 blockquote {
   border-left: 0.5ch solid var(--accent4);
   padding: 1ch 1ch 1ch 1.5ch;
