--- a/styles/main.css
+++ b/styles/main.css
@@ -27,6 +27,7 @@ html, body {
 }
 
 main {
+  transform: translateX(calc(50vw - 50%));
   padding: 1ch 1ch 0 1ch;
   width: 78ch;
   display: inline-block;
