--- a/styles/main.css
+++ b/styles/main.css
@@ -38,6 +38,10 @@ a {
   text-underline-position: under;
 }
 
+a[id] {
+  text-decoration: none !important;
+}
+
 a:focus {
   color: var(--accent1);
   font-weight: bold;
